# quant-pairs

./: .gitignore  Dockerfile  csvExport.cpp  dataScraper.cpp  downloadData.py  main.cpp  quant-pairs.sln
QuantDashboard/: Program.cs  _Imports.razor
QuantDashboard/Pages/: Error.cshtml  Error.cshtml.cs  FetchData.razor  Index.razor  _Host.cshtml
QuantDashboard/Properties/: launchSettings.json
QuantDashboard/Services/: BacktestExecute.cs
QuantDashboard/Shared/: MainLayout.razor  NavMenu.razor
cpp/: CMakeLists.txt  compute.cpp  compute.h  csvExport.cpp  csvExport.h  dataScraper.cpp  dataScraper.h  main.cpp
plotter/: fetchData.py  plotter.py  requirements.txt
